--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <title>Record Store</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app. Oops.</noscript>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
 </html>
