--- a/src/404.html
+++ b/src/404.html
@@ -49,9 +49,13 @@
         const replacementUrlFirstPart = l.protocol + '//' + l.hostname + (l.port ? ':' + l.port : '') +
         l.pathname.split('/').slice(0, 1 + pathSegmentsToKeep).join('/') + '/?/' +
         l.pathname.slice(1).split('/').slice(pathSegmentsToKeep).join('/').replace(/&/g, '~and~');
+
         const firstPartLowerCase = replacementUrlFirstPart.toLowerCase();
 
         const replacementUrlSecondPart = (l.search ? '&' + l.search.slice(1).replace(/&/g, '~and~') : '') + l.hash;
+
+        const replacementUrl = firstPartLowerCase + replacementUrlSecondPart;
+        console.log(replacementUrl);
 
         l.replace(firstPartLowerCase + replacementUrlSecondPart);
       })();
