--- a/src/404.html
+++ b/src/404.html
@@ -50,14 +50,14 @@
         l.pathname.split('/').slice(0, 1 + pathSegmentsToKeep).join('/') + '/?/' +
         l.pathname.slice(1).split('/').slice(pathSegmentsToKeep).join('/').replace(/&/g, '~and~');
 
-        const firstPartLowerCase = replacementUrlFirstPart.toLowerCase();
+        // const firstPartLowerCase = replacementUrlFirstPart.toLowerCase();
 
         const replacementUrlSecondPart = (l.search ? '&' + l.search.slice(1).replace(/&/g, '~and~') : '') + l.hash;
 
-        const replacementUrl = firstPartLowerCase + replacementUrlSecondPart;
+        const replacementUrl = replacementUrlFirstPart + replacementUrlSecondPart;
         console.log(replacementUrl);
 
-        l.replace(firstPartLowerCase + replacementUrlSecondPart);
+        l.replace(replacementUrl);
       })();
     </script>
   </head>
